refactor(QueryAllFormUseCase.java): update execute method to return paginated results